third_party/move/move-compiler-v2/tests/checking/visibility-checker/ok_until_inlining.exp

Diagnostics:
warning: public inline function `foo` calls `m::priv` which may not be accessible when expanded
  ┌─ tests/checking/visibility-checker/ok_until_inlining.move:2:23
  │
2 │     public inline fun foo() {
  │                       ^^^ contains calls that may be inaccessible when expanded
3 │         priv();
  │         ------ private function may not be accessible in all contexts where `foo` can be called

error: function `0xc0ffee::m::priv` is private to module `0xc0ffee::m`
   ┌─ tests/checking/visibility-checker/ok_until_inlining.move:6:9
   │
 3 │         priv();
   │         ------ called here
   ·
 6 │     fun priv() {}
   │         ^^^^ called from function `0xc0ffee::n::test`
   ·
15 │         0xc0ffee::m::foo(); // not ok
   │         ------------------ from a call inlined at this callsite
