third_party/move/move-compiler-v2/tests/checking/visibility-checker/ok_until_inlining.move
module 0xc0ffee::m {
    public inline fun foo() {
        priv();
    }

    fun priv() {}

    fun test() {
        foo(); // ok
    }
}

module 0xc0ffee::n {
    fun test() {
        0xc0ffee::m::foo(); // not ok
    }
}
